# cmd/nurmed/handlers/module.go
@@ -4,6 +4,7 @@ import (
 	"go.uber.org/fx"
 
 	"nurmed/cmd/nurmed/handlers/auth"
+	"nurmed/cmd/nurmed/handlers/products"
 	"nurmed/cmd/nurmed/handlers/purchases"
 	"nurmed/cmd/nurmed/handlers/sales"
 	"nurmed/cmd/nurmed/handlers/users"
@@ -11,6 +12,7 @@ import (
 
 var Module = fx.Options(
 	auth.Module,
+	products.Module,
 	purchases.Module,
 	sales.Module,
 	users.Module,
